codepkg/objects/History_Tracker__c.object
<CustomObject>
    <description>This object tracks the field value changes for  various objects</description>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>History Tracker</relationshipLabel>
        <relationshipName>History_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closeout_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closeout Request</label>
        <referenceTo>Closeout_Request__c</referenceTo>
        <relationshipLabel>History Tracker</relationshipLabel>
        <relationshipName>History_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closeout_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closeout Task</label>
        <referenceTo>Closeout_Task__c</referenceTo>
        <relationshipLabel>History Tracker</relationshipLabel>
        <relationshipName>History_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disaster_Grant_Funding_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Disaster Grant / Funding Opportunity</label>
        <referenceTo>Funding_Opportunity__c</referenceTo>
        <relationshipLabel>History Tracker</relationshipLabel>
        <relationshipName>History_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>IF( OR( ISBLANK(End_Date__c) , ISNULL(End_Date__c)) , Now()- CreatedDate, IF((End_Date__c - CreatedDate) &lt; 0 , 0 , FLOOR(End_Date__c - CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_in_Hours__c</fullName>
        <formula>IF( OR( ISBLANK( End_Date__c ) , ISNULL(End_Date__c)), (floor((Now() - CreatedDate)*24))+
(((((Now() - CreatedDate)*24)-floor((Now() - CreatedDate)*24))*60)/100), IF((End_Date__c - CreatedDate) &lt; 0 , 0 , (floor((End_Date__c - CreatedDate)*24))+
(((((End_Date__c - CreatedDate)*24)-floor((End_Date__c - CreatedDate)*24))*60)/100)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (Hours.Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>Name of the field whose value is tracked</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HH_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HH Application</label>
        <referenceTo>HH_Application__c</referenceTo>
        <relationshipLabel>History Tracker</relationshipLabel>
        <relationshipName>History_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incident_Subrecipient_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident Subrecipient Summary</label>
        <referenceTo>Incident_Subrecipient_Stage__c</referenceTo>
        <relationshipLabel>History Tracker</relationshipLabel>
        <relationshipName>History_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Latest_Record__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Latest Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Type of the Object for which you are creating the record</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>History Tracker</relationshipLabel>
        <relationshipName>History_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Request</label>
        <referenceTo>Payment_Request__c</referenceTo>
        <relationshipLabel>History Tracker</relationshipLabel>
        <relationshipName>History_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Application</label>
        <referenceTo>Pre_Application__c</referenceTo>
        <relationshipLabel>History Tracker</relationshipLabel>
        <relationshipName>History_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Closeout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Closeout</label>
        <referenceTo>Project_Closeout__c</referenceTo>
        <relationshipLabel>History Tracker</relationshipLabel>
        <relationshipName>History_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>History Tracker</relationshipLabel>
        <relationshipName>History_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <description>Salesforce Id of the record for which history tracker record is created .</description>
        <encryptionScheme>None</encryptionScheme>
        <label>RecordId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Owner__c</fullName>
        <description>Owner of the record while it was tracked for this record.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_For_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request For Information</label>
        <referenceTo>Request_For_Information__c</referenceTo>
        <relationshipLabel>History Tracker</relationshipLabel>
        <relationshipName>History_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transmittal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transmittal</label>
        <referenceTo>Transmittal__c</referenceTo>
        <relationshipLabel>History Tracker</relationshipLabel>
        <relationshipName>History_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>History Tracker</label>
    <nameField>
        <displayFormat>HT-{000000}</displayFormat>
        <label>History Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>History Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>CWMP_Sharing__c</fullName>
        <label>CWMP Sharing</label>
    </sharingReasons>
</CustomObject>